# tinyTetris

./: Cargo.toml  README.md  build.rs  build.sh  rust-toolchain.toml
src/: main.rs
src/game/: mod.rs
src/graphics/: mod.rs
src/interface/: mod.rs
