[package]
name = "tinyTetris"
version = "0.1.0"
edition = "2024"

[features]
default = []

[dependencies]
conquer-once = { version = "0.4.0", default-features = false }
thiserror = { version = "2.0.12", default-features = false }
libtinyos = { git = "https://github.com/lmeller-git/libtinyos" }
tinygraphics = { git = "https://github.com/lmeller-git/libtinyos" }
spin = "0.10.0"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
